--- a/login.html
+++ b/login.html
@@ -7,14 +7,14 @@
     <link rel="icon" type="image/png" href="logo.png">
     <style>
         :root {
-            --primary-color: #4C8BF5;
-            --secondary-color: #F6B93B;
-            --accent-color: #A9DFBF;
-            --background-color: #F1F4F9;
-            --text-color: #333;
+            --primary-color: #2F2FA2;
+            --secondary-color: #553D67;
+            --accent-color: #F64C72;
+            --background-color: #EAE8FF;
+            --text-color: #242582;
             --card-bg: #FFFFFF;
-            --button-hover-color: #FFB142;
-            --header-text-color: #000;
+            --button-hover-color: #F64C72;
+            --header-text-color: #FFFFFF;
         }
         body {
             background-color: var(--background-color);
